// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test users reducer should get message about a problem with authentication 1`] = `
Object {
  "buildings": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "units": Array [],
}
`;

exports[`test users reducer should get message about buildings list's not finding 1`] = `
Object {
  "buildings": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "units": Array [],
}
`;

exports[`test users reducer should get message about units list's not finding 1`] = `
Object {
  "buildings": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "units": Array [],
}
`;

exports[`test users reducer should load buildings list 1`] = `
Object {
  "0": Object {
    "_id": "1111-2222-3333-4444",
    "cost": "1488 gold",
    "hp": "500",
    "name": "Hobok",
    "worker": "tester",
  },
  "buildings": undefined,
  "errorMessage": "",
  "units": Array [],
}
`;

exports[`test users reducer should load units list 1`] = `
Object {
  "0": Object {
    "_id": "1111-2222-3333-4444",
    "cost": "1488 gold",
    "hp": "500",
    "name": "Hobok",
    "worker": "tester",
  },
  "buildings": Array [],
  "errorMessage": "",
  "units": undefined,
}
`;
